fix: Grid item vertical spacing

--- a/src/_includes/postcss/_components-grid.css
+++ b/src/_includes/postcss/_components-grid.css
@@ -1,7 +1,8 @@
 .grid {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 3rem;
+  column-gap: 3rem;
+  row-gap: 4.5rem;
   margin-top: 1.5rem;
   padding: 0;
 
@@ -45,7 +46,7 @@
 .grid__description {
   font-family: "Canela Deck Web", serif;
   margin: 0.25rem auto 0;
-  padding-top: 1rem;
+  padding-top: 1.25rem;
   position: relative;
   width: 80%;
   font-size: 1rem;
